readability: fixes
git-svn-id: svn+ssh://osteele.com/home/osteele/svn/osteele.com/trunk@217 7da26926-1605-0410-981f-d0d861a4a689

--- a/javascripts/fvlogger/logger.css
+++ b/javascripts/fvlogger/logger.css
@@ -21,7 +21,7 @@
 #fvlogger * {
 	background-repeat: no-repeat;	
 	font-size: 9pt;
-	text-transform: lowercase;
+	/*text-transform: lowercase;*/
 }
 
 #fvlogger h6 {
